--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "latest",
     "react-hook-form": "^7.47.0",
     "react-lottie": "^1.2.3",
+    "sonner": "^1.0.3",
     "tailwind-merge": "^1.14.0",
     "tailwind-styled-components": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
@@ -38,6 +39,7 @@
     "autoprefixer": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "latest",
     "tailwindcss": "latest",
     "typescript": "latest"
