--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/react-lottie": "^1.2.7",
     "axios": "^1.5.1",
@@ -26,6 +28,7 @@
     "react-dom": "latest",
     "react-hook-form": "^7.47.0",
     "react-lottie": "^1.2.3",
+    "recharts": "^2.8.0",
     "sonner": "^1.0.3",
     "tailwind-merge": "^1.14.0",
     "tailwind-styled-components": "^2.2.0",
